--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/ElectrophysRL"]
-	path = src/ElectrophysRL
+[submodule "old_ac_long_arms/ElectrophysRL"]
+	path = old_ac_long_arms/ElectrophysRL
 	url = https://github.com/im-ant/ElectrophysRL.git
