some bug fixes, works on mila cluster

--- a/long_arms/default_config.ini
+++ b/long_arms/default_config.ini
@@ -46,9 +46,9 @@ dataset_path= /network/tmp1/chenant/ant/dataset/cifar/
 discount = 0.997
 # 1.0 for MC, 0.0 for TD(0)
 lambda_coef = 1.0
-use_recurrence = True
+use_recurrence = False
 
-# DQN: number steps to update target net
+# DQN: number (update / optim) steps to update target net
 target_update_interval = 1
 # DQN: min step before learning?
 min_steps_learn = 16
