--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -24,7 +24,7 @@ seed = 1
 total_num_steps = 5e5
 
 # Steps between logging  (default: 128?)
-log_interval_steps = 128
+log_interval_steps = 1028
 # Logging mode [all, last, gap, last+gap, none]
 log_snapshot_mode = last
 
@@ -33,6 +33,7 @@ log_snapshot_mode = last
 # NOTE: fixed to num_arms = 2 for now, need to update in future
 corridor_length = 8
 num_arms = 2
+require_final_action = False
 img_len = 20
 grayscale = False
 flatten_obs = False
@@ -43,7 +44,7 @@ dataset_path= /network/tmp1/chenant/ant/dataset/cifar/
 [Algorithm]
 # =====================================
 # Set up RL algorithm, here specifically the "R0D1" algorithm
-discount = 0.997
+discount = 0.999
 # 1.0 for MC, 0.0 for TD(0)
 lambda_coef = 1.0
 use_recurrence = False
