implemented by own (R0D1) nn model, where one can configure "use_recurrence" to decide between using an LSTM or a MLP + ReLU. remove the need for setting use_recurrence in the algorithm. added the corresponding changes to the config file and the training script

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -21,11 +21,11 @@ exp_name = long_arm
 # used to also denote the run number
 seed = 1
 # total number of training steps  (default 9e4)
-total_num_steps = 1e5
+total_num_steps = 3e5
 
 # Length of ach sample, needs to be sufficiently long to have 1 sample
 # per episode  (should be corridor_length + 5 + 2 (leeway))
-sampler_batch_T = 8
+sampler_batch_T = 15
 
 # Steps between logging  (default: 128?)
 log_interval_steps = 2048
@@ -37,9 +37,9 @@ log_snapshot_mode = last
 # NOTE: fixed to num_arms = 2 for now, need to update in future
 corridor_length = 1
 num_arms = 2
-final_obs_aliased = True
+final_obs_aliased = False
 require_final_action = False
-img_len = 32
+img_len = 20
 grayscale = False
 flatten_obs = False
 scale_observation = False
@@ -52,7 +52,6 @@ dataset_path= /network/tmp1/chenant/ant/dataset/cifar/
 discount = 0.999
 # 1.0 for MC, 0.0 for TD(0)
 lambda_coef = 1.0
-use_recurrence = True
 
 # DQN: number (update / optim) steps to update target net
 target_update_interval = 1
@@ -76,6 +75,7 @@ clip_grad_norm = 80
 [Model]
 # =====================================
 # Specific to the rlpyt.models.dqn.atari_r2d1_model model
+use_recurrence = True
 
 # fc between conv and lstm layers (default 512)
 fc_size = 512
