updating training script to make the action_delay and corridor_length configurable in the config file. also added an option to do evaluation in the config file but this latter option has not been tested

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -24,7 +24,7 @@ seed = 1
 total_num_steps = 3e5
 
 # Length of ach sample, needs to be sufficiently long to have 1 sample
-# per episode  (should be corridor_length + 5 + 2 (leeway))
+# per episode  (should be action_delay corridor + 5 + leeway)
 sampler_batch_T = 15
 
 # Steps between logging  (default: 128?)
@@ -32,9 +32,13 @@ log_interval_steps = 2048
 # Logging mode [all, last, gap, last+gap, none]
 log_snapshot_mode = last
 
+# Do evaluation
+do_eval = False
+
 
 [Env]
 # NOTE: fixed to num_arms = 2 for now, need to update in future
+action_delay_len = 5
 corridor_length = 1
 num_arms = 2
 final_obs_aliased = False
