minor logging changes

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -32,7 +32,7 @@ log_interval_steps = 2048
 # Logging mode [all, last, gap, last+gap, none]
 log_snapshot_mode = last
 
-# Do evaluation
+# Do evaluation (need to test this feature more thoroughly TODO)
 do_eval = False
 
 
