--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -21,11 +21,11 @@ exp_name = long_arm
 # used to also denote the run number
 seed = 1
 # total number of training steps  (default 9e4)
-total_num_steps = 3e5
+total_num_steps = 2e5
 
-# Length of ach sample, needs to be sufficiently long to have 1 sample
-# per episode  (should be action_delay corridor + 5 + leeway)
-sampler_batch_T = 15
+# Length of sampler trajectories. To have 1 sampler per episode, this
+# quantity should be multiple of traj_length to have full traj training
+sampler_batch_T = 18
 
 # Steps between logging  (default: 128?)
 log_interval_steps = 2048
@@ -37,9 +37,10 @@ do_eval = False
 
 
 [Env]
-# NOTE: fixed to num_arms = 2 for now, need to update in future
+# Current traj_len = action_delay + corridor + 4 = 9
 action_delay_len = 5
-corridor_length = 1
+corridor_length = 0
+
 num_arms = 2
 final_obs_aliased = False
 require_final_action = False
@@ -57,16 +58,25 @@ discount = 0.999
 # 1.0 for MC, 0.0 for TD(0)
 lambda_coef = 1.0
 
+# Needs to be same as traj_length to have full traj RNN training
+store_rnn_state_interval = 9
+# Replay traj length, needs to be larger than rnn_interval
+algo_batch_T = 12
+# minibatch size for replay training (default: 64)
+replay_batch_B = 16
+
+# DQN: min step before learning?
+min_steps_learn = 1e3
 # DQN: number (update / optim) steps to update target net
 target_update_interval = 1
-# DQN: min step before learning?
-min_steps_learn = 16
 # DQN: number step to linearly decay eps (default 5e4)?
 eps_steps = 6e4
 # (in Agent) Initial epsilon (default: 1.0)
 eps_init = 1.0
 # (in Agent) Final epsilon (default: 0.01)
 eps_final = 0.01
+
+
 
 double_dqn = False
 
