added ability to log to tensorboard directly

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -30,7 +30,9 @@ sampler_batch_T = 18
 # Steps between logging  (default: 128?)
 log_interval_steps = 2048
 # Logging mode [all, last, gap, last+gap, none]
-log_snapshot_mode = last
+log_snapshot_mode = none
+# Log also to tensorboard summary writer?
+log_use_summary_writer = True
 
 # Do evaluation (need to test this feature more thoroughly TODO)
 do_eval = False
