added ability to configure how large the replay buffer is

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -66,11 +66,15 @@ store_rnn_state_interval = 9
 algo_batch_T = 12
 # minibatch size for replay training (default: 64)
 replay_batch_B = 16
+# Buffer size
+replay_buffer_size = 1e6
+# Replay ratio (not sure what this means, default=1)
+replay_ratio = 1
+# DQN: number (update / optim) steps to update target net
+target_update_interval = 1
 
 # DQN: min step before learning?
 min_steps_learn = 1e3
-# DQN: number (update / optim) steps to update target net
-target_update_interval = 1
 # DQN: number step to linearly decay eps (default 5e4)?
 eps_steps = 6e4
 # (in Agent) Initial epsilon (default: 1.0)
