added feature to the delayed_action environment where the environment can be set to "prediction only", ie the agent has no control over transition and only needs to learn the values

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -44,6 +44,7 @@ action_delay_len = 5
 corridor_length = 0
 
 num_arms = 2
+prediction_only = False
 final_obs_aliased = False
 require_final_action = False
 img_len = 20
