--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -45,7 +45,7 @@ corridor_length = 0
 
 num_arms = 2
 prediction_only = False
-final_obs_aliased = False
+final_obs_aliased = True
 require_final_action = False
 img_len = 20
 grayscale = False
