--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -44,7 +44,7 @@ action_delay_len = 5
 corridor_length = 0
 
 num_arms = 2
-prediction_only = False
+prediction_only = True
 final_obs_aliased = True
 require_final_action = False
 img_len = 20
