added ability to make the delay_action environment fully observable, by setting random bird images in all states except for the cat and dog states (which still have randomly sampling)

--- a/long_arms/r0d1/default_config.ini
+++ b/long_arms/r0d1/default_config.ini
@@ -47,6 +47,7 @@ corridor_length = 0
 num_arms = 2
 prediction_only = True
 final_obs_aliased = True
+fully_observable = False
 require_final_action = False
 
 # Reward and data configs
